<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardElevation="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="@color/bg">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/NodeMCU_name"
                android:textColor="@color/white"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/NodeMCU_link"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2.3"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                tools:ignore="NestedWeights">
                <TextView
                    android:id="@+id/authCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/authCode"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    style="@style/YansButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_side_btn"
                    tools:ignore="DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck">

                    <Button
                        android:id="@+id/dropDownBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:color="@color/white"
                        android:gravity="center"
                        android:text="@string/refreshBtnTxt"
                        android:textAllCaps="false"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/YansButtonLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_btn"
                tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/delete_icon"
                    android:gravity="center"
                    android:text="@string/deleteBtnTxt"
                    android:textAllCaps="false"
                    tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>





