<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="1000dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    android:id="@+id/userMain">
    <LinearLayout
        android:id="@+id/mainDiv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:id="@+id/navDiv"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    tools:ignore="NestedWeights" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:layout_weight="3"
                    >
                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="Petar Yankov"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />

                    <LinearLayout
                        android:id="@+id/logOutDiv"
                        style="@style/YansButtonLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/rounded_btn"
                        tools:ignore="DuplicateClickableBoundsCheck">

                        <Button
                            android:id="@+id/logOutBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:text="@string/logOut"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/white"
                    android:text="@string/alarm_system"

                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/alarmStatusSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                     />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nextDiv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            >
            <LinearLayout
                android:id="@+id/collapseNodemcusDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                tools:ignore="NestedWeights">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        >
                        <TextView
                            android:id="@+id/collapseNodemcusTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/nodemcus"
                            android:textColor="@color/white" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            style="@style/YansButtonLayout"
                            android:background="@drawable/rounded_btn"
                            android:layout_marginStart="8dp"
                            >
                            <Button
                                android:id="@+id/addNodeMCUsBtn"
                                android:background="@android:color/transparent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/addNodeMCUsBtn"
                                android:textAllCaps="false"
                                android:drawableEnd="@drawable/add_icon"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        style="@style/YansButtonLayout"
                        android:background="@drawable/rounded_side_btn"
                        android:layout_marginStart="8dp"
                        >
                        <Button
                            android:id="@+id/dropDownBtn"
                            android:background="@android:color/transparent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textAllCaps="false"
                            android:drawableEnd="@drawable/down_arrow"
                            />
                    </LinearLayout>
                </LinearLayout>
<!--                android:visibility="visible"-->
                <LinearLayout
                    android:id="@+id/noNodemcuSDiv"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_weight="3"
                    >
                    <TextView
                        android:id="@+id/collapseNodemcusTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_nodemcusTxt"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        />
                </LinearLayout>
<!--                 android:visibility="gone"-->
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/nodemcu_renderDiv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="8"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/NodeMCURecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/item_nodemcu"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessLeaf">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <!-- drawable/rectangle_3.xml -->

<!--    </View>-->




</androidx.constraintlayout.widget.ConstraintLayout>

